--- a/src/App.css
+++ b/src/App.css
@@ -169,13 +169,13 @@ img{
 }
 .b4{
     font-family: roboto,sans-serif;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 .c4{
     color:rgb(107, 114, 128);
     font-family:'Open Sans', sans-serif ;
-    font-size: 18px;
+    font-size: 1.1;
     font-weight: bold;
     padding-bottom: 10%;
 }
@@ -362,8 +362,20 @@ img{
 }
 
 @media screen and (max-width:600px) and (min-width:300px){
-    .btn-grp{
-        padding-left: 10% !important;
+    .a3 .b{
+        font-size: 1rem;
+    }
+    .btn-grp{     
+    padding-left: 0% !important;
+    margin-left: 10%;
+    margin-right: 10%;
+    }
+    .gga{
+        font-size:1.5rem;
+        font-weight: bold;
+    }
+    .sixth .a4{
+        padding-top:10%;
     }
     .cnt2{
         padding-left:0;
@@ -392,11 +404,14 @@ img{
        width:100%;
    }
    .crd{
-       padding-left:10%;
+       padding-left:1%;
+   }
+   .rr .col{
+       padding-right: 0;
    }
    .heading{
        text-align: center;
-       font-size: 3rem;
+       font-size: 2.7rem;
    }
    .txt{
        text-align: center;
@@ -418,6 +433,7 @@ img{
      padding-left:0;
    }  
    .second{
+       padding-bottom: 10%;
        height:100%;
    }
    .img-grp{
@@ -449,7 +465,7 @@ img{
    }
    .rw2{
        width:100%;
-       padding-left:20%;
+       padding-left:13%;
        padding-right: 0;
    }
    .rr3{
@@ -504,14 +520,24 @@ img{
    }
    .brk{
        margin:0;
+       margin-top: 2%;
+       margin-bottom: 2%;
    }
    .sec img{
-       width:80%;
+       width:70%;
        height:80%;
+   }
+   .aa {
+       padding-top:46%;
+       padding-bottom: 10%;
+       text-align: center;
+   }
+   .sec{
+       text-align: center;
    }
    .fifth img{
        height:80% !important;
-       width:80% !important;
+       width:70% !important;
    }
    .bb{
        padding-top: 10%;
